Fix header z-index

--- a/style.css
+++ b/style.css
@@ -927,13 +927,12 @@ table {
 }
 /* line 1, sass/layout/_header.scss */
 .site-header {
-    /* position: relative; */
-    /* transition: top 0.3s ease-in-out 0s, visibility 0s linear 0.3s, left 0s; */
     background-color: var(--miles_primary_dark);
     color: white;
     height: var(--header-height);
     position: sticky;
     top: 0;
+    z-index: 999;
 }
 
 .site-header .site-header-container {
@@ -1014,13 +1013,12 @@ table {
 
 /* line 1, sass/layout/_grid.scss */
 .site-main {
-    position: relative;
-    top: 6rem;
+    margin-top: 6rem;
     margin-bottom: 6rem;
 }
 
 .home .site-main {
-    top: 0;
+    margin-top: 0;
 }
 
 /* line 5, sass/layout/_grid.scss */
@@ -1638,9 +1636,6 @@ Other menus
 .cities-navigation ul.menu li > ul.sub-menu li > ul.sub-menu {
     right: 100%;
     top: -7px;
-    -webkit-transition: all 200ms ease-in-out 0s;
-    -moz-transition: all 200ms ease-in-out 0s;
-    -o-transition: all 200ms ease-in-out 0s;
     transition: all 200ms ease-in-out 0s;
     opacity: 0;
 }
@@ -1682,9 +1677,6 @@ Other menus
 .cities-navigation ul.menu li:hover > ul {
     position: absolute;
     left: auto;
-    -webkit-transition: all 300ms ease-in-out 0s;
-    -moz-transition: all 300ms ease-in-out 0s;
-    -o-transition: all 300ms ease-in-out 0s;
     transition: all 300ms ease-in-out 0s;
     opacity: 1;
     display: block;
@@ -1744,13 +1736,7 @@ Other menus
     position: relative;
     /* border-radius: 25px; */
     /* box-shadow: 0 0 28px rgba(0, 0, 0, 0.2); */
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
     transform: rotate(0deg);
-    -webkit-transition: 0.25s ease-in-out;
-    -moz-transition: 0.25s ease-in-out;
-    -o-transition: 0.25s ease-in-out;
     transition: 0.25s ease-in-out;
     cursor: pointer;
 }
@@ -1770,13 +1756,7 @@ Other menus
     background: #ffffff;
     border-radius: 2px;
     opacity: 1;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
     transform: rotate(0deg);
-    -webkit-transition: 0.25s ease-in-out;
-    -moz-transition: 0.25s ease-in-out;
-    -o-transition: 0.25s ease-in-out;
     transition: 0.25s ease-in-out;
 }
 /* line 71, sass/navigation/_mega-menu.scss */
@@ -1823,17 +1803,11 @@ Other menus
 /* line 111, sass/navigation/_mega-menu.scss */
 .main-navigation .open-menu #nav-icon span:nth-child(2) {
     top: 1em;
-    -webkit-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
-    -o-transform: rotate(45deg);
     transform: rotate(45deg);
 }
 /* line 118, sass/navigation/_mega-menu.scss */
 .main-navigation .open-menu #nav-icon span:nth-child(3) {
     top: 1em;
-    -webkit-transform: rotate(-45deg);
-    -moz-transform: rotate(-45deg);
-    -o-transform: rotate(-45deg);
     transform: rotate(-45deg);
 }
 /* line 125, sass/navigation/_mega-menu.scss */
@@ -2091,9 +2065,6 @@ Other menus
     color: white;
     line-height: 42px;
     font-size: 20px;
-    -webkit-transition: all 120ms ease-in-out 0s;
-    -moz-transition: all 120ms ease-in-out 0s;
-    -o-transition: all 120ms ease-in-out 0s;
     transition: all 120ms ease-in-out 0s;
     text-decoration: none;
 }
@@ -2120,48 +2091,20 @@ Other menus
 }
 /* line 311, sass/navigation/_mega-menu.scss */
 .widget_nav_menu:nth-child(1) {
-    -webkit-animation: widget-anim 0.12s forwards;
-    /* Safari 4+ */
-    -moz-animation: widget-anim 0.12s forwards;
-    /* Fx 5+ */
-    -o-animation: widget-anim 0.12s forwards;
-    /* Opera 12+ */
     animation: widget-anim 0.12s forwards;
-    /* IE 10+, Fx 29+ */
 }
 /* line 311, sass/navigation/_mega-menu.scss */
 .widget_nav_menu:nth-child(2) {
-    -webkit-animation: widget-anim 0.24s forwards;
-    /* Safari 4+ */
-    -moz-animation: widget-anim 0.24s forwards;
-    /* Fx 5+ */
-    -o-animation: widget-anim 0.24s forwards;
-    /* Opera 12+ */
     animation: widget-anim 0.24s forwards;
-    /* IE 10+, Fx 29+ */
 }
 
 /* line 311, sass/navigation/_mega-menu.scss */
 .widget_nav_menu:nth-child(3) {
-    -webkit-animation: widget-anim 0.36s forwards;
-    /* Safari 4+ */
-    -moz-animation: widget-anim 0.36s forwards;
-    /* Fx 5+ */
-    -o-animation: widget-anim 0.36s forwards;
-    /* Opera 12+ */
     animation: widget-anim 0.36s forwards;
-    /* IE 10+, Fx 29+ */
 }
 /* line 311, sass/navigation/_mega-menu.scss */
 .widget_nav_menu:nth-child(4) {
-    -webkit-animation: widget-anim 0.48s forwards;
-    /* Safari 4+ */
-    -moz-animation: widget-anim 0.48s forwards;
-    /* Fx 5+ */
-    -o-animation: widget-anim 0.48s forwards;
-    /* Opera 12+ */
     animation: widget-anim 0.48s forwards;
-    /* IE 10+, Fx 29+ */
 }
 
 /*--------------------------------------------------------------
